AM_CPPFLAGS = -I$(top_buildir)/include -I$(top_srcdir)/include
AM_CFLAGS =

lib_LTLIBRARIES = libbus.la

libbus_la_LIBADD =
libbus_la_LDFLAGS =

libbus_la_SOURCES = \
	bus_client.c \
	bus_message.c \
	daemon.c \
	event.c \
	list.c \
	log.c \
	object.c \
	parameter.c \
	socket.c \
	string.c \
	timer.c \
	variant.c \
	variant_map.c

